--- a/views/artist/artist-id.ejs
+++ b/views/artist/artist-id.ejs
@@ -82,7 +82,7 @@
               </table>
         </div>
         
-        <div class="album py-4">
+        <div class="album">
             <div class="container-fluid">
               <h1 class="text-white text-center">
                 <% if(count === 1){ %>
