--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -933,6 +933,9 @@ div.squarebox .t {
 .mbuttom{
     margin-bottom: 100px;
 }
+.m2buttom{
+  margin-bottom: 85px;
+}
 
 .volume-container,.progress-container{
   accent-color: #00FFFF;
@@ -954,11 +957,43 @@ div.squarebox .t {
 }
 .bg-favourite{
   background-color: #0d0a0b;
-  background-image: linear-gradient(180deg, #0d0a0b 0%, #009fc2 74%);
+  background-image: linear-gradient(180deg, #0d0a0b 0%, #18d5ffa4 74%);
   height: 100px;
 }
+
 .ellipsis-songid{
   font-size: 20px;
+}
+
+.click-here{
+  font-size: 1.25rem;
+  padding: 1rem;
+  border-radius: 50px;
+  border: 0 solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+  outline: 2.5px solid;
+  outline-color: rgba(255, 255, 255, 0);
+  outline-offset: 0px;
+  text-shadow: none;
+  -webkit-transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+          transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+  outline-color: rgba(255, 255, 255, 0.5);
+  outline-offset: 0px;
+}
+
+.click-here:hover{
+  border: 1px solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.2);
+  outline-offset: 15px;
+  outline-color: rgba(255, 255, 255, 0);
+  text-shadow: 1px 1px 2px #427388;
+}
+.no-fav{
+  margin-top: 20%;
+}
+.find-song{
+  text-align: center;
+  font-weight:600;
 }
 
 .hidder { width: 100%; }
