--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,6 +1,16 @@
 <%- include("partials/header.ejs") %>
   <% let count=1 %>
     <div class="col">
+    <% if(error && error.length>0){ %>
+      <div class='alert alert-danger' role='alert'>
+          <%= error %>
+      </div>
+      <% } %>
+          <% if(success && success.length>0){ %>
+              <div class='alert alert-success' role='alert'>
+                  <%= success %>
+              </div>
+              <% } %>
       <div class="headbg mbuttom mt-3">
         <ul class="nav nav-pills justify-content-center pt-4">
           <li class="nav-item">
