--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,7 +20,7 @@
                       <div class="col">
                         <div class="card shadows shadow-lg">
                           <div class="card-body">
-                            <a class="text-decoration-none" href="/song/<%= recommend._id %>">
+                            <a class="text-decoration-none song--link__card" href="/song/<%= recommend._id %>">
                               <div>
                                 <img class="song--img song--img__data" src="<%= recommend.image %>">
                                 <% if(!currentUser){ %>
