--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,12 +3,12 @@
     <div class="d-flex now-playing flex-item align-items-center">
       <img class="track_img">
       <div>
-        <div class="track-name text-decoration-none d-block">
+        <a class="track-name text-decoration-none d-block">
           Life
-        </div>
-        <div class="artist-name track-artist-name text-decoration-none d-block">
+        </a>
+        <a class="artist-name track-artist-name text-decoration-none d-block">
           Best Music Website
-        </div>
+        </a>
       </div>
     </div>
     <div class="player-controls flex-item">
