--- a/views/song/search.ejs
+++ b/views/song/search.ejs
@@ -66,7 +66,7 @@
                           <td>
                             <div class="pt-1 d-flex">
                               <img class="songimg-admin song--img__data" src="<%= searchsong.image %>">
-                              <a class="pt-4 px-2 text-white text-decoration-none song--name__data" href="/song/<%= searchsong._id %>">
+                              <a class="pt-4 px-2 text-white text-decoration-none song--name__data song--link__table" href="/song/<%= searchsong._id %>">
                                 <%= searchsong.name %>
                               </a>
                             </div>
