--- a/views/album/album-id.ejs
+++ b/views/album/album-id.ejs
@@ -40,7 +40,7 @@
                                         </span>
                                         <% count++ %>
                                             <img class="songimg song--img__data" src="<%= albumsong.image %>">
-                                            <a class="pt-4 text-white text-decoration-none  song--name__data"
+                                            <a class="pt-4 text-white text-decoration-none  song--name__data song--link__table"
                                                 href="/song/<%= albumsong.id %>">
                                                 <%= albumsong.name %>
                                             </a>
