--- a/views/artist/artist-id.ejs
+++ b/views/artist/artist-id.ejs
@@ -29,7 +29,7 @@
                                     <span class="songorder d-block pt-4"><%= count %></span>
                                     <% count++ %>
                                     <img class="songimg song--img__data" src="<%= artistsong.image %>">
-                                    <a class="pt-4 text-white text-decoration-none  song--name__data" href="/song/<%= artistsong.id %>">
+                                    <a class="pt-4 text-white text-decoration-none  song--name__data song--link__table" href="/song/<%= artistsong.id %>">
                                         <%= artistsong.name %>
                                     </a>
                                     <a class="pt-4 text-white text-decoration-none song--artist__data hidden">
