--- a/views/favourite.ejs
+++ b/views/favourite.ejs
@@ -36,7 +36,7 @@
               <td>
                 <div class="pt-1 d-flex">
                   <img class="songimg-admin song--img__data" src="<%= usersong.image %>">
-                  <a class="pt-4 px-2 text-white text-decoration-none song--name__data"
+                  <a class="pt-4 px-2 text-white text-decoration-none song--name__data song--link__table"
                     href="/song/<%= usersong._id %>">
                     <%= usersong.name %>
                   </a>
