--- a/views/album/album.ejs
+++ b/views/album/album.ejs
@@ -1,4 +1,4 @@
-<%- include("../partials/header.ejs") %>
+<%- include("../partials/albumheader.ejs") %>
 <div class="col pt-4 mbuttom">
     <div class="album">
         <div class="container-fluid">
