--- a/views/artist/remove.ejs
+++ b/views/artist/remove.ejs
@@ -20,25 +20,25 @@
         <table class="table text-white pt-4 text-center sortable">
           <thead>
             <tr>
-              <th class="shadows">#</th>
+              <th class="shadows tohide">#</th>
               <th class="shadows">
                 Name
                 <i class="fa-solid fa-sort"></i>
               </th>
-              <th class="shadows">
+              <th class="shadows tohide">
                 Number of Songs
-                <i class="fa-solid fa-sort"></i>
+                <i class="fa-solid fa-sort tohide"></i>
               </th>
-              <th class="shadows">
+              <th class="shadows tohide">
                 Number of Albums
-                <i class="fa-solid fa-sort"></i>
+                <i class="fa-solid fa-sort tohide"></i>
               </th>
             </tr>
           </thead>
           <tbody>
             <% allArtist.forEach(function(allArtist){ %>
               <tr class="shadows">
-                <td class="pt-4">
+                <td class="pt-4 tohide">
                   <%= count %>
                 </td>
                 <% count++ %>
@@ -51,7 +51,7 @@
                   </div>
                 </td>
                 <td>
-                  <p class="pt-4 text-white text-decoration-none">
+                  <p class="pt-4 text-white text-decoration-none tohide">
                     <% allSong.forEach(function(allSong){ %>
                       <% if(allArtist.name === allSong.artist.name){ %>
                         <% countsong++ %>
@@ -62,7 +62,7 @@
                   </p>
                 </td>
                 <td>
-                  <p class="pt-4 text-white text-decoration-none">
+                  <p class="pt-4 text-white text-decoration-none tohide">
                     <% allAlbum.forEach(function(allAlbum){ %>
                       <% if(allArtist.name === allAlbum.artist.name){ %>
                         <% countsong++ %>
