--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -62,7 +62,7 @@
 
                     <div class="container-fluid">
                         <div class="row flex-nowrap">
-                            <div class="col-auto bg-black">
+                            <div class="col-auto bg-black p-0">
                                 <div class="text-white min-vh-100">
                                     <ul class="nav flex-column mb-0 align-items-sm-start">
                                         <% if(!currentUser || currentUser && !currentUser.isAdmin){ %>
@@ -87,7 +87,7 @@
                                                     </li>
                                                 </a>
                                             <% } %>
-                                            <a class="library">
+                                            <a class="library tocenter">
                                                 Library
                                             </a>
                                             <a href="/album" class="choice albums nav-link align-middle">
