--- a/views/artist/artist.ejs
+++ b/views/artist/artist.ejs
@@ -1,4 +1,4 @@
-<%- include("../partials/header.ejs") %>
+<%- include("../partials/artistheader.ejs") %>
 <div class="col pt-4 mbuttom">
   <div class="album">
     <div class="container-fluid">
