--- a/views/favourite.ejs
+++ b/views/favourite.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header.ejs") %>
+<%- include("partials/favheader.ejs") %>
   <div class="col p-0 m2buttom searchbg">
     <div class="container-fluid px-0 bg-favourite">
       <div class="px-5 py-4 text-center d-block">
