--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header.ejs") %>
+<%- include("partials/homeheader.ejs") %>
   <% if(!currentUser || currentUser && !currentUser.isAdmin){ %>
     <div class="col mbuttom">
 
