--- a/views/partials/albumheader.ejs
+++ b/views/partials/albumheader.ejs
@@ -80,7 +80,7 @@
                                                 </li>
                                             </a>
                                             <% } else { %>
-                                                <a href="/login" class="choice favourite nav-link align-middle sidebar--click">
+                                                <a href="/login" class="choice favourite nav-link align-middle">
                                                     <li>
                                                         <img src="/image/icons/favourite.png" width="25rem">
                                                         <span class="d-none d-sm-inline">FAVOURITE</span>
