--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -104,13 +104,13 @@
                                             </a>
                                             <% } %>
                                                 <% if(currentUser && currentUser.isAdmin){ %>
-                                                    <a href="/" class="choice nav-link align-middle">
+                                                    <a href="/" class="choice add nav-link align-middle">
                                                         <li>
                                                             <img src="/image/icons/addmin.png" width="25rem">
                                                             <span class="d-none d-sm-inline">ADD</span>
                                                         </li>
                                                     </a>
-                                                    <a href="/song/remove" class="choice nav-link align-middle">
+                                                    <a href="/song/remove" class="choice remove nav-link align-middle sidebar--click">
                                                         <li>
                                                             <img src="/image/icons/remove.png" width="25rem">
                                                             <span class="d-none d-sm-inline">REMOVE</span>
