--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -66,7 +66,7 @@
                                 <div class="account-settings">
                                     <div class="user-profile">
                                         <div class="user-avatar">
-                                            <img src="<%= user.image %>">
+                                            <img class="" src="<%= user.image %>">
                                         </div>
                                         <h5 class="user-name">
                                             <%- user.firstname + ' ' + user.lastname %>
